--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "class-validator": "^0.14.0",
+    "kafkajs": "^2.2.3",
     "pg": "^8.9.0",
+    "readline-sync": "^1.4.10",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.11"
